# fuse-backend-rs

./: .gitignore  CHAGNELOG.md  CODEOWNERS  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: release.yml  rust.yml  xfstests.yml
docs/: overlayfs.md
docs/images/: overlayfs.drawio
src/: async_util.rs  lib.rs  version_manager.rs
src/abi/: fuse_abi.rs  fuse_abi_freebsd.rs  fuse_abi_linux.rs  fuse_abi_macos.rs  linux_abi.rs  mod.rs  virtio_fs.rs
src/api/: filesystem.rs  mod.rs  pseudo_fs.rs  server.rs  vfs.rs  vfs_persist.rs
src/api/filesystem/: async_io.rs  mod.rs  overlay.rs  sync_io.rs
src/api/server/: async_io.rs  mod.rs  sync_io.rs
src/api/vfs/: async_io.rs  mod.rs  sync_io.rs
src/common/: async_file.rs  async_runtime.rs  file_buf.rs  file_traits.rs  mod.rs
src/overlayfs/: config.rs  datasource.rs  direct.rs  inode_store.rs  layer.rs  mod.rs  plugin.rs  sync_io.rs  utils.rs
src/passthrough/: async_io.rs  config.rs  credentials.rs  file_handle.rs  file_status.rs  fs.rs  fs_persist.rs  inode_store.rs  linux_sync_io.rs  macos_sync_io.rs  mod.rs  mount_fd.rs  multikey.rs  os_compat.rs  overlay.rs  passthrough_fs_linux.rs  passthrough_fs_macos.rs  stat.rs  statx.rs  sync_io.rs  sync_io_linux.rs  sync_io_macos.rs  util.rs  xattrmap.rs
src/transport/: file_traits.rs  file_volatile_slice.rs  fs_cache_req_handler.rs  mod.rs
src/transport/fusedev/: bytes_cursor.rs  freebsd_session.rs  fuse_t_session.rs  linux_session.rs  macos_session.rs  mod.rs  session.rs
src/transport/virtiofs/: fs_cache_req_handler.rs  mod.rs
testoverlay/: Cargo.toml
testoverlay/src/: main.rs
tests/: macfuse_smoke.rs  smoke.rs
tests/example/: macfuse.rs  mod.rs  passthroughfs.rs
tests/overlay/: Cargo.toml
tests/overlay/src/: main.rs
tests/passthrough/: Cargo.toml
tests/passthrough/src/: main.rs
tests/scripts/: unionmount_test_overlay.sh  xfstests_overlay.exclude  xfstests_overlay.sh  xfstests_pathr.exclude  xfstests_pathr.sh
tests/testoverlay/: Cargo.toml
tests/testoverlay/src/: main.rs
