[package]
name = "fuse-backend-rs"
version = "0.12.1"
keywords = ["fuse", "virtio", "virtio-fs", "vhost-user-fs"]
categories = ["filesystem", "os::linux-apis"]
description = "A rust library for Fuse(filesystem in userspace) servers and virtio-fs devices"
authors = [
    "Liu Bo <bo.liu@linux.alibaba.com>",
    "Liu Jiang <gerry@linux.alibaba.com>",
    "Peng Tao <bergwolf@hyper.sh>",
]
readme = "README.md"
license = "Apache-2.0 AND BSD-3-Clause"
edition = "2024"
repository = "https://github.com/cloud-hypervisor/fuse-backend-rs"
homepage = "https://github.com/cloud-hypervisor/"
build = "build.rs"

[dependencies]
arc-swap = "1.7"
async-trait = { version = "0.1.88", optional = true }
bitflags = "2.9"
dbs-snapshot = { version = "1.5", optional = true }
io-uring = { version = "0.7", optional = true }
lazy_static = "1.5"
libc = "0.2.172"
log = "0.4"
mio = { version = "1.0", features = ["os-poll", "os-ext"] }
nix = { version = "0.30", features = ["event", "fs", "ioctl", "mount", "poll", "uio", "user"] }
radix_trie = "0.2"
tokio = { version = "1", optional = true }
tokio-uring = { version = "0.5", optional = true }
vmm-sys-util = { version = "0.14", optional = true }
vm-memory = { version = "0.16", features = ["backend-mmap"] }
virtio-bindings = { version = "=0.2.4", optional = true }
virtio-queue = { version = "0.14", optional = true }
vhost = { version = "0.13", features = ["vhost-user","vhost-user-backend"], optional = true }
versionize_derive = { version = "0.1", optional = true }
versionize = { version = "0.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = { version = ">=0.8", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
caps = { version = "0.5", optional = true }
tokio-uring = { version = "0.4", optional = true }

[dev-dependencies]
tokio-test = "0.4"
vmm-sys-util = "0.14"
vm-memory = { version = "0.16", features = ["backend-mmap", "backend-bitmap"] }

[features]
default = ["fusedev"]
async-io = [
    "async-trait",
    "tokio-uring",
    "tokio/fs",
    "tokio/net",
    "tokio/sync",
    "tokio/rt",
    "tokio/macros",
    "io-uring",
]
fusedev = ["vmm-sys-util", "caps", "core-foundation-sys"]
virtiofs = ["virtio-queue", "caps", "vmm-sys-util"]
vhost-user-fs = ["virtiofs", "vhost", "caps"]
persist = ["dbs-snapshot", "versionize", "versionize_derive"]
fuse-t = []

[package.metadata.docs.rs]
all-features = true
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "aarch64-apple-darwin",
]
