[package]
name = "fuse-backend-rs"
version = "0.13.1"
keywords = ["fuse", "virtio", "virtio-fs", "vhost-user-fs"]
categories = ["filesystem", "os::linux-apis"]
description = "A rust library for Fuse(filesystem in userspace) servers and virtio-fs devices"
authors = [
    "Liu Bo <bo.liu@linux.alibaba.com>",
    "Liu Jiang <gerry@linux.alibaba.com>",
    "Peng Tao <bergwolf@hyper.sh>",
]
readme = "README.md"
license = "Apache-2.0 AND BSD-3-Clause"
edition = "2018"
repository = "https://github.com/cloud-hypervisor/fuse-backend-rs"
homepage = "https://github.com/cloud-hypervisor/"
build = "build.rs"

[workspace]
members = [
    "tests/passthrough",
    "tests/overlay",
]

[workspace.dependencies]
# rust-vmm crates
vhost = "0.11.0"
virtio-bindings = "=0.2.4"
virtio-queue = "0.12.0"
vm-memory = "0.14.1"
vmm-sys-util = "0.12.1"

[dependencies]
arc-swap = "1.5"
async-trait = { version = "0.1.42", optional = true }
bitflags = "1.1"
dbs-snapshot = { version = "1.5.2", optional = true }
io-uring = { version = "0.5.8", optional = true }
lazy_static = "1.4"
libc = "0.2.68"
log = "0.4.6"
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
nix = "0.24"
radix_trie = "0.2.1"
tokio = { version = "1", optional = true }
tokio-uring = { version = "0.4.0", optional = true }
vmm-sys-util = { workspace = true, optional = true }
vm-memory = { workspace = true, features = ["backend-mmap"] }
virtio-bindings = { workspace = true, optional = true }
virtio-queue = { workspace = true, optional = true }
vhost = { workspace = true, features = ["vhost-user","vhost-user-backend"], optional = true }
versionize_derive = { version = "0.1.6", optional = true }
versionize = { version = "0.2.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = { version = ">=0.8", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
caps = { version = "0.5", optional = true }
tokio-uring = { version = "0.4.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.2"
vmm-sys-util = "0.12.1"
vm-memory = { version = "0.14.1", features = ["backend-mmap", "backend-bitmap"] }

[features]
default = ["fusedev"]
async-io = [
    "async-trait",
    "tokio-uring",
    "tokio/fs",
    "tokio/net",
    "tokio/sync",
    "tokio/rt",
    "tokio/macros",
    "io-uring",
]
fusedev = ["vmm-sys-util", "caps", "core-foundation-sys"]
virtiofs = ["virtio-queue", "caps", "vmm-sys-util"]
vhost-user-fs = ["virtiofs", "vhost", "caps"]
persist = ["dbs-snapshot", "versionize", "versionize_derive"]
fuse-t = []

[package.metadata.docs.rs]
all-features = true
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "aarch64-apple-darwin",
]
