[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse-backend-rs = { path = "../../", features = ["fusedev"] }
log = ">=0.4.6"
vmm-sys-util = ">=0.4"
libc = ">=0.2.68"
simple_logger = ">=1.13.0"
signal-hook = ">=0.3.10"
lazy_static = ">=1.4.0"
